<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="footer can apply weight" />

            <com.htc.lib1.cc.widget.HtcFooter
                android:id="@+id/htcfooter1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.htc.lib1.cc.widget.HtcFooterButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/weight" />

                <com.htc.lib1.cc.widget.HtcFooterButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:text="@string/wieght_2" />
            </com.htc.lib1.cc.widget.HtcFooter>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/footerbar" />

            <com.htc.lib1.cc.widget.HtcFooter
                android:id="@+id/htcfooter2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                enable_transparent="true">

                <com.htc.lib1.cc.widget.HtcFooterButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/btn1" />

                <com.htc.lib1.cc.widget.HtcFooterButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/btn2" />
            </com.htc.lib1.cc.widget.HtcFooter>

            <com.htc.lib1.cc.widget.HtcFooter
                android:id="@+id/htcfooter3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.htc.lib1.cc.widget.HtcFooterButton
                    android:id="@+id/showpopupwindow"
                    android:onClick="onClick"
                    android:text="@string/popupwindow" />
            </com.htc.lib1.cc.widget.HtcFooter>

            <com.htc.lib1.cc.widget.HtcFooter
                android:id="@+id/htcfooter4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.htc.lib1.cc.widget.HtcFooterButton
                    android:id="@+id/showpopupexpwindow"
                    android:onClick="onClick"
                    android:text="@string/popupexpandwindow" />
            </com.htc.lib1.cc.widget.HtcFooter>

            <com.htc.lib1.cc.widget.HtcFooter
                android:id="@+id/htcfooter5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.htc.lib1.cc.widget.HtcFooterButton
                    android:id="@+id/showhtcshareviapopup"
                    android:onClick="onClick"
                    android:text="@string/htcshareviapopup" />
            </com.htc.lib1.cc.widget.HtcFooter>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
